--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Frank Ruhl Libre', serif;
+  background: linear-gradient(302deg, rgb(198,46, 39), transparent),
+    url(https://grainy-gradients.vercel.app/noise.svg);
+  /* filter: contrast(170%) brightness(1000%); */
+  mix-blend-mode: color;
 }
 
 html {
@@ -169,6 +173,8 @@ section {
   justify-content: center;
   gap: 5rem;
   height: 80vh;
+  border-radius: 2%;
+  /* box-shadow: 12px 12px 2px 1px rgb(185,40,36) */
 }
 
 .section__pic-container {
